Add RC_LRPreset node and refactor RC_LevelsAdjust with interactive UI
- RC_LRPreset: Lightroom/Camera Raw preset browser with live preview
- RC_LevelsAdjust: Interactive levels control with draggable handles and per-channel editing

--- a/locales/en/nodeDefs.json
+++ b/locales/en/nodeDefs.json
@@ -855,6 +855,10 @@
       "channel": {
         "name": "Channel",
         "tooltip": "Adjustment channel:\n- RGB: Adjust all channels together\n- Red/Green/Blue: Adjust individual color channels"
+      },
+      "levels_state": {
+        "name": "Levels State",
+        "tooltip": "Interactive UI JSON data (auto-managed, no manual editing required)."
       }
     },
     "presets": {
